Fixed draft toolbar action z-index for dropdown actions.

--- a/Js/Backend/Assets/styles/sass/custom.scss
+++ b/Js/Backend/Assets/styles/sass/custom.scss
@@ -431,6 +431,8 @@
         float: left;
         display: block;
         margin-right: 6px;
+        position: relative;
+        z-index: 0;
 
         button:not(.dropdown-toggle) {
           padding: 7px;
